[gd_scene load_steps=64 format=2]

[ext_resource path="res://wall.gd" type="Script" id=1]
[ext_resource path="res://external/wall_frames/wall_0.png" type="Texture" id=2]
[ext_resource path="res://external/wall_frames/wall_1.png" type="Texture" id=3]
[ext_resource path="res://external/wall_frames/wall_2.png" type="Texture" id=4]
[ext_resource path="res://external/wall_frames/wall_3.png" type="Texture" id=5]
[ext_resource path="res://external/wall_frames/wall_4.png" type="Texture" id=6]
[ext_resource path="res://external/wall_frames/wall_5.png" type="Texture" id=7]
[ext_resource path="res://external/wall_frames/wall_6.png" type="Texture" id=8]
[ext_resource path="res://external/wall_frames/wall_7.png" type="Texture" id=9]
[ext_resource path="res://external/wall_frames/wall_8.png" type="Texture" id=10]
[ext_resource path="res://external/wall_frames/wall_9.png" type="Texture" id=11]
[ext_resource path="res://external/wall_frames/wall_10.png" type="Texture" id=12]
[ext_resource path="res://external/wall_frames/wall_11.png" type="Texture" id=13]
[ext_resource path="res://external/wall_frames/wall_12.png" type="Texture" id=14]
[ext_resource path="res://external/wall_frames/wall_13.png" type="Texture" id=15]
[ext_resource path="res://external/wall_frames/wall_14.png" type="Texture" id=16]
[ext_resource path="res://external/wall_frames/wall_15.png" type="Texture" id=17]
[ext_resource path="res://external/wall_frames/wall_16.png" type="Texture" id=18]
[ext_resource path="res://external/wall_frames/wall_17.png" type="Texture" id=19]
[ext_resource path="res://external/wall_frames/wall_18.png" type="Texture" id=20]
[ext_resource path="res://external/wall_frames/wall_19.png" type="Texture" id=21]
[ext_resource path="res://external/wall_frames/wall_20.png" type="Texture" id=22]
[ext_resource path="res://external/wall_frames/wall_21.png" type="Texture" id=23]
[ext_resource path="res://external/wall_frames/wall_22.png" type="Texture" id=24]
[ext_resource path="res://external/wall_frames/wall_23.png" type="Texture" id=25]
[ext_resource path="res://external/wall_frames/wall_24.png" type="Texture" id=26]
[ext_resource path="res://external/wall_frames/wall_25.png" type="Texture" id=27]
[ext_resource path="res://external/wall_frames/wall_26.png" type="Texture" id=28]
[ext_resource path="res://external/wall_frames/wall_27.png" type="Texture" id=29]
[ext_resource path="res://external/wall_frames/wall_28.png" type="Texture" id=30]
[ext_resource path="res://external/wall_frames/wall_29.png" type="Texture" id=31]
[ext_resource path="res://external/wall_frames/wall_30.png" type="Texture" id=32]
[ext_resource path="res://external/wall_frames/wall_31.png" type="Texture" id=33]
[ext_resource path="res://external/wall_frames/wall_32.png" type="Texture" id=34]
[ext_resource path="res://external/wall_frames/wall_33.png" type="Texture" id=35]
[ext_resource path="res://external/wall_frames/wall_34.png" type="Texture" id=36]
[ext_resource path="res://external/wall_frames/wall_35.png" type="Texture" id=37]
[ext_resource path="res://external/wall_frames/wall_36.png" type="Texture" id=38]
[ext_resource path="res://external/wall_frames/wall_37.png" type="Texture" id=39]
[ext_resource path="res://external/wall_frames/wall_38.png" type="Texture" id=40]
[ext_resource path="res://external/wall_frames/wall_39.png" type="Texture" id=41]
[ext_resource path="res://external/wall_frames/wall_40.png" type="Texture" id=42]
[ext_resource path="res://external/wall_frames/wall_41.png" type="Texture" id=43]
[ext_resource path="res://external/wall_frames/wall_42.png" type="Texture" id=44]
[ext_resource path="res://external/wall_frames/wall_43.png" type="Texture" id=45]
[ext_resource path="res://external/wall_frames/wall_44.png" type="Texture" id=46]
[ext_resource path="res://external/wall_frames/wall_45.png" type="Texture" id=47]
[ext_resource path="res://external/wall_frames/wall_46.png" type="Texture" id=48]
[ext_resource path="res://external/wall_frames/wall_47.png" type="Texture" id=49]
[ext_resource path="res://external/wall_frames/wall_48.png" type="Texture" id=50]
[ext_resource path="res://external/wall_frames/wall_49.png" type="Texture" id=51]
[ext_resource path="res://external/wall_frames/wall_50.png" type="Texture" id=52]
[ext_resource path="res://external/wall_frames/wall_51.png" type="Texture" id=53]
[ext_resource path="res://external/wall_frames/wall_52.png" type="Texture" id=54]
[ext_resource path="res://external/wall_frames/wall_53.png" type="Texture" id=55]
[ext_resource path="res://external/wall_frames/wall_54.png" type="Texture" id=56]
[ext_resource path="res://external/wall_frames/wall_55.png" type="Texture" id=57]
[ext_resource path="res://external/wall_frames/wall_56.png" type="Texture" id=58]
[ext_resource path="res://external/wall_frames/wall_57.png" type="Texture" id=59]
[ext_resource path="res://external/wall_frames/wall_58.png" type="Texture" id=60]
[ext_resource path="res://external/wall_frames/wall_59.png" type="Texture" id=61]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 48 )

[node name="wall" type="Area2D"]
z_index = 15
collision_layer = 32
collision_mask = 4
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -78 )
scale = Vector2( 6, 6 )
frames = SubResource( 2 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, -48 )
shape = SubResource( 1 )

[node name="drain_timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="life_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="filter_enemy"]
[connection signal="body_entered" from="." to="." method="filter_enemy"]
[connection signal="timeout" from="drain_timer" to="." method="drain_interval"]
[connection signal="timeout" from="life_timer" to="." method="lifetime_up"]
